Fix alignments

--- a/css/main.scss
+++ b/css/main.scss
@@ -46,7 +46,7 @@ body{
             .mobilemenu {
                 display: none;
                 flex-direction: column;
-                width: 60%;
+                width: 80%;
                 background-color: $lightGrey;
                 opacity: 0.9;
                 position: fixed;
@@ -64,7 +64,7 @@ body{
                 .mobile-menu-items{
                     color: $orangish;
                     font-weight: 600;
-                    font-size: 32px;
+                    font-size: 24px;
                     line-height: 44px;
                     margin-left: 10%;
                     margin-top: 5%;
@@ -177,10 +177,6 @@ body{
             margin: 10px;
             border: 1px solid transparent;           
             cursor: pointer;
-            &:hover{
-                background-color: $orangish;
-                color: $greyish;
-            }
             a{
                 text-decoration: none;
                 color:$greyish;
@@ -235,8 +231,12 @@ body{
         .footerLogo{
             img{
                 width: 120px;
-                height: 120px;                
+                height: 120px;                               
             }
+            :hover{
+                scale: 1.5;
+                transition: all 0.5s ease-in-out;
+            } 
         }
         .footerCopyright{
             color:$greyish;
